--- a/OFFERS-356/bg/index.html
+++ b/OFFERS-356/bg/index.html
@@ -377,7 +377,9 @@
                                 <p><strong> Ana_Paris01</strong> Вчера получих поръчката си, в магазина има много полезни неща. Освен печатите, поръчах супер удължаваща миглите спирала с огромна отстъпка!<img src="img/img1.jpg" style="max-width: 200px; width: 100%; display: block; margin-top: 10px;" alt>
                                 </p>
 
-                                <p><strong> Maa0950</strong> <span class="text-pink"> @ana.mua.h</span> приятелко, не си единствената, заради веждите  постоянно ми се налага да закъснявам, а с печатите сега 2 секунди и готово! От тях също си купих и спирала, ефектът е невероятен! Вижте...</p>
+                                <p><strong> Maa0950</strong> <span class="text-pink"> @ana.mua.h</span> приятелко, не си единствената, заради веждите  постоянно ми се налага да закъснявам, а с печатите сега 2 секунди и готово! От тях също си купих и спирала, ефектът е невероятен! Вижте...
+                                
+                                    <img src="img/img6.jpg" style="max-width: 200px; width: 100%; display: block; margin-top: 10px;" alt></p>
                                 <p><strong> Kari_99</strong> Момичета, какво страхотно нещо, колко струва? Ще се появи ли в магазините?</p>
                                 <p><strong> BeautyStamp</strong> <span class="text-pink"> @Kari_99</span> за съжаление няма да има скоро доставки в магазините, но можете да закупите нашите продукти на официалния сайт.</p>
                                 <p><strong> AnaSixty</strong> ИСКАААМ!!!</p>
@@ -403,7 +405,7 @@
 
                                 <p><strong> buket_online_com</strong> красотаа!</p>
                                 <p><strong> zayasolga</strong> <span class="text-pink"> @marywallerx3</span> нещо ме съмнява, че е удобно за използване, пробвах контури за вежди, абсолютно не ми хареса?</p>
-                                <p><strong> marywallerx3</strong> <span class="text-pink"> @zayasolga</span> това са абсолютно различни неща, аз също опитах контурите, много са неудобни, а тук веднъж прилагам и цял ден съм щастлива))) плюс пудрата е с много високо качество, може да се каже много решения в един флакон))))<img src="img/img3.jpg" style="max-width: 200px; width: 100%; display: block; margin-top: 10px;" alt></p>
+                                <p><strong> marywallerx3</strong> <span class="text-pink"> @zayasolga</span> това са абсолютно различни неща, аз също опитах контурите, много са неудобни, а тук веднъж прилагам и цял ден съм щастлива))) плюс пудрата е с много високо качество.</p>
                                 <p><strong> zayasolga</strong> <span class="text-pink"> @marywallerx3</span> изглежда, че ще трябва да опитам, благодаря ви. Зная, че няма да съветвате лоши неща, и маската също ще купя.</p>
                                 <p><strong> ami_mama</strong> Много красиви вежди се получават, вече месец използвам комплекта!</p>
                                 <p><strong> teta_alex</strong> Това е страхотно!</p>
@@ -429,9 +431,9 @@
                                 <p><strong> Mariya_schastie99</strong> Страхотно е това, което току-що получих и бързам да го споделя с вас!<span class="text-pink"> @BeautyStamp</span> определено това е идеален продукт за използване всеки ден, особено когато нямате време. Впечатлена съм. Гледайте видеоклипа ми, харесайте го и не губете време, а поръчайте, докато има промоция! Поръчах още и прекрасен комплект бижута с отстъпка, ако насочите лъч светлината към камъка, ще се появят думите "Обичам те" на 100 езика. Супер готино!<img src="img/img4.jpg" style="max-width: 200px; width: 100%; display: block; margin-top: 10px;" alt> </p>
                                 <p><strong> mariia0684</strong> <span class="text-pink"> @Mariya_schastie99</span> красавица, както винаги на върха, и както винаги намераш много изгодни оферти</p>
                                 <p><strong> dariondraten1</strong> Фотошоп</p>
-                                <p><strong> kris0301</strong> Mariya ти си просто кралица на веждите) много готино </p>
+                                <p><strong> kris0301</strong> Mariya ти си просто кралица на веждите) много готино <img src="img/img5.jpg" style="max-width: 200px; width: 100%; display: block; margin-top: 10px;" alt></p>
                                 <p><strong> Mariya_schastie99</strong> <span class="text-pink"> @kris0301</span> аз поръчах в официалния онлайн магазин, изпратих линк на лични съобщения, точно сега има промоция. О, аз още купих и такива неща, които не позволват меката част на ухото да не се разтяга, когато носиш тежки обеци. Удобно нещо.</p>
-                                <p><strong> aniatkach</strong> Супер са тези вежди!<img src="img/img5.jpg" style="max-width: 200px; width: 100%; display: block; margin-top: 10px;" alt></p>
+                                <p><strong> aniatkach</strong> Супер са тези вежди!</p>
                                 <p> <strong> polina17_11</strong> прекрасна както винаги, дай ми също линк, много интересно нещо</p>
                                 <p><strong> bajes_h73</strong> peauteful</p>
                                 <p><strong> solomina.lesya</strong> Красавице, веждите са супер.</p>
