--- a/OFFERS-356/bg/index.html
+++ b/OFFERS-356/bg/index.html
@@ -152,7 +152,7 @@
 
                 <input type="text" name="name" id="name" placeholder="Вашето име">
                 <input type="text" name="phone" id="phone" placeholder="Вашия телефон">
-                <div class="btn"><input type="submit" class="button" name="order" id="order-btn" value="Заказать"></div>
+                <div class="btn"><input type="submit" class="button" name="order" id="order-btn" value=" Поръчайте"></div>
             </form>
         </div>
 
@@ -183,7 +183,7 @@
 
                         <input type="text" name="name" id="name" placeholder="Вашето име">
                         <input type="text" name="phone" id="phone" placeholder="Вашия телефон">
-                        <div class="btn"><input type="submit" class="button" name="order" id="order-btn" value="Заказать"></div>
+                        <div class="btn"><input type="submit" class="button" name="order" id="order-btn" value=" Поръчайте"></div>
                     </form>
                 </div>
 
@@ -477,7 +477,7 @@
 
                             <input type="text" name="name" id="name" placeholder="Вашето име">
                             <input type="text" name="phone" id="phone" placeholder="Вашия телефон">
-                            <div class="btn"><input type="submit" class="button" name="order" id="order-btn" value="Заказать"></div>
+                            <div class="btn"><input type="submit" class="button" name="order" id="order-btn" value=" Поръчайте"></div>
                         </form>
                     </div>
                 </div>
