--- a/OFFERS-356/bg/index.html
+++ b/OFFERS-356/bg/index.html
@@ -142,9 +142,9 @@
                 <h2> Поръчайте сега!</h2>
                 <div class="price"><span class="old-price">
                         <x-oldprice> 158</x-oldprice>
-                        <x-currency> €</x-currency> лева</span>
+                         лева</span>
                     <x-newprice> 79</x-newprice>
-                    <x-currency> €</x-currency> лева</div>
+                    лева</div>
             </div>
             <form action method="post" class="order-form">
                 <input name="csrf_token" type="hidden" value="3abec9c331a3896679203f85419a606b:1617607085">
@@ -164,7 +164,7 @@
             <div class="top-col">
                 <div class="top-text-black"> Вашите перфектни вежди</div>
                 <div class="top-text-big text-pink"> за три секунди!</div>
-                <div class="top-text-p"> Омръзна ли ви да се борите с несъвършенството на своите вежди всеки ден? Писна ли ви всяка сутрин отново и отново да рисувате равномерни ъгли? Вече не е нужно да отделяте много време за това:<strong> 3 секунди и готово!</strong></div> <br>
+                <div class="top-text-p"> Омръзна ли ви всеки ден да се борите с несъвършенството на своите вежди всеки ден? Писна ли ви всяка сутрин отново и отново да рисувате равномерни ъгли? Вече не е нужно да отделяте много време за това:<strong> 3 секунди и готово!</strong></div> <br>
                 <div class="product-img"><img src="img/product-img-mob.jpg"></div>
                 <br><br>
 
@@ -173,9 +173,9 @@
                         <h2> Поръчайте сега!</h2>
                         <div class="price"><span class="old-price">
                                 <x-oldprice> 158</x-oldprice>
-                                <x-currency> €</x-currency> лева</span>
+                                 лева</span>
                             <x-newprice> 79</x-newprice>
-                            <x-currency> €</x-currency> лева</div>
+                             лева</div>
                     </div>
                     <form action method="post" class="order-form">
                         <input name="csrf_token" type="hidden" value="3abec9c331a3896679203f85419a606b:1617607085">
@@ -235,7 +235,7 @@
                     </div>
                     <div class="boxes">
                         <div class="circle"><i class="icon-time"></i></div>
-                        <p class="circle-title"> издръжливост през целия <br> ден</p>
+                        <p class="circle-title"> продължителност цял <br> ден</p>
                     </div>
                     <div class="boxes">
                         <div class="circle"><i class="icon-good"></i></div>
@@ -304,7 +304,7 @@
 
                 </div>
                 <div class="col m6">
-                    <p class="text-white"> • идеально запълва пространството между косъмчетата;<br> • позволява незабавно да получите абсолютно симетрични вежди;<br> • результатът се запазва през цялия ден. </p>
+                    <p class="text-white"> • идеально запълва пространството между косъмчетата;<br> • позволява незабавно да получите абсолютно симетрични вежди;<br> • резултатът се запазва през цялия ден. </p>
                     <p class="text-white">
                         <span class="text-pink"> Притеснявате се, че комплектът няма да ви свърши работа?</span> Специално за вас са разработени две различни форми на печати: закръглена и по-графична, с ясно изразен ъгъл. Просто използвайте формата, която ви подхожда най-добре, и оценете отличния ефект!</p>
 
@@ -345,7 +345,7 @@
                 </div>
 
                 <div class="col m6">
-                    <p align="left"><span class="text-pink"> Полезни тайни за красотата:</span><br><br> • лесно ще направите веждите си още по-прецизни, като просто коригирате финалната форма с памучно тампонче;<br><br> • можете да използвате печата и за запълване на дразнещи празнини между косъмчетата, без да нарушавате формата им; за целта просто го прокарайте по дължината на естествената вежда;<br><br> • можете да направите цвета по-наситен, като използвате печата на няколко етапа - просто продължавайте да наслоявате отпечатъка, докато не постигнете идеала!</p><br><br>
+                    <p align="left"><span class="text-pink"> Полезни тайни:</span><br><br> • лесно ще направите веждите си още по-прецизни, като просто коригирате финалната форма с памучно тампонче;<br><br> • можете да използвате печата и за запълване на дразнещи празнини между косъмчетата, без да нарушавате формата им; за целта просто го прокарайте по дължината на естествената вежда;<br><br> • можете да направите цвета по-наситен, като използвате печата на няколко етапа - просто продължавайте да наслоявате отпечатъка, докато не постигнете идеала!</p><br><br>
                     <img src="img/before-after.jpg" class="before-after"><br><br>
                     <p align="left"><span class="text-pink"> Как да свалите пудрата?</span> Просто използвайте любимото си средство за отстраняване на грим: отнема секунди. </p>
                 </div>
@@ -358,7 +358,7 @@
         <div class="container">
 
             <center>
-                <h1 class="text-pink"> Отзиви от потребители</h1>
+                <h1 class="text-pink"> Отзиви на клиенти</h1>
             </center> <br>
             <div class="owl-carousel owl-theme">
                 <div class="item">
@@ -374,16 +374,16 @@
                             <div class="scroll">
                                 <p><strong> BeautyStamp</strong> Учим се от<span class="text-pink"> @makeup_bymadison</span> как да получим безупречни вежди за нула време. </p>
                                 <p><strong> Kristi.mua.h</strong> О, Боже, откога мечтая за това, вече го поръчах, толкова ми омръзна да рисувам всяка сутрин по половин час.</p>
-                                <p><strong> Ana_Paris01</strong> Вчера получих поръчката си, в магазина има много полезни неща. Освен печатите, поръчах супер удължаваща миглите спирала с огромна отстъпка!<img src="img/img1.jpg" style="max-width: 200px; width: 100%; display: block; margin-top: 10px;" alt>
+                                <p><strong> Ana_Paris01</strong> Вчера получих поръчката си, в магазина има много полезни неща. Освен печатите, поръчах супер удължаваща <br> миглите спирала с огромна отстъпка!<img src="img/img1.jpg" style="max-width: 200px; width: 100%; display: block; margin-top: 10px;" alt>
                                 </p>
 
-                                <p><strong> Maa0950</strong> <span class="text-pink"> @ana.mua.h</span> приятелко, не си единствената, заради веждите  постоянно ми се налага да закъснявам, а с печатите сега 2 секунди и готово! От тях също си купих и спирала, ефектът е невероятен! Вижте...
+                                <p><strong> Maa0950</strong> <span class="text-pink"> @ana.mua.h</span> приятелко, не си единствената, заради веждите  постоянно ми се налага да закъснявам, а с печатите <br> сега 2 секунди и готово! От тях също си купих и спирала, ефектът е невероятен! Вижте...
                                 
                                     <img src="img/img6.jpg" style="max-width: 200px; width: 100%; display: block; margin-top: 10px;" alt></p>
                                 <p><strong> Kari_99</strong> Момичета, какво страхотно нещо, колко струва? Ще се появи ли в магазините?</p>
                                 <p><strong> BeautyStamp</strong> <span class="text-pink"> @Kari_99</span> за съжаление няма да има скоро доставки в магазините, но можете да закупите нашите продукти на официалния сайт.</p>
                                 <p><strong> AnaSixty</strong> ИСКАААМ!!!</p>
-                                <p><strong> Makeupmaster77</strong> Една приятелка донесе такъв комплект от Щатите, не ми хареса, не разбрах как става номера, може би си струва да го опитам сама</p>
+                                <p><strong> Makeupmaster77</strong> Една приятелка донесе такъв комплект от Щатите, не ми хареса, не разбрах как става номера, може би си <br> струва да го опитам сама</p>
                                 <p><strong> BeautyStamp</strong> <span class="text-pink"> @ Makeupmaster77</span> Задължително опитате сами, ние сме сигурни, че няма да се разочаровате.</p>
                             </div>
                         </div>
@@ -403,9 +403,11 @@
                                 <p><strong> marywallerx3</strong> Гримиране на веждите за секунди?! Това е най-дългата част от ежедневния ми грим, която  най-накрая остана в миналото. Също така купих подарък за любимата ми сестра с огромна отстъпка, @ BeautyStamp, благодаря. Подаръкът много ѝ хареса, аз нося медальона с ключ, а тя - гривната.<span class="text-pink"> @BeautyStamp</span>     <img src="img/img2.jpg" style="max-width: 200px; width: 100%; display: block; margin-top: 10px;" alt></p>
                                 <p><strong> veronika_chachyna</strong> Мери, фантастично, ще поръчам.</p>
 
-                                <p><strong> buket_online_com</strong> красотаа!</p>
+                                <p><strong> buket_online_com
+
+                                </strong> красотаа!</p>
                                 <p><strong> zayasolga</strong> <span class="text-pink"> @marywallerx3</span> нещо ме съмнява, че е удобно за използване, пробвах контури за вежди, абсолютно не ми хареса?</p>
-                                <p><strong> marywallerx3</strong> <span class="text-pink"> @zayasolga</span> това са абсолютно различни неща, аз също опитах контурите, много са неудобни, а тук веднъж прилагам и цял ден съм щастлива))) плюс пудрата е с много високо качество.</p>
+                                <p><strong> marywallerx3</strong> <span class="text-pink"> @zayasolga</span> това са абсолютно различни неща, аз също опитах контурите, много са неудобни, а тук веднъж <br> прилагам и цял ден съм щастлива))) плюс пудрата е с много високо качество.</p>
                                 <p><strong> zayasolga</strong> <span class="text-pink"> @marywallerx3</span> изглежда, че ще трябва да опитам, благодаря ви. Зная, че няма да съветвате лоши неща, и маската също ще купя.</p>
                                 <p><strong> ami_mama</strong> Много красиви вежди се получават, вече месец използвам комплекта!</p>
                                 <p><strong> teta_alex</strong> Това е страхотно!</p>
@@ -432,7 +434,7 @@
                                 <p><strong> mariia0684</strong> <span class="text-pink"> @Mariya_schastie99</span> красавица, както винаги на върха, и както винаги намераш много изгодни оферти</p>
                                 <p><strong> dariondraten1</strong> Фотошоп</p>
                                 <p><strong> kris0301</strong> Mariya ти си просто кралица на веждите) много готино <img src="img/img5.jpg" style="max-width: 200px; width: 100%; display: block; margin-top: 10px;" alt></p>
-                                <p><strong> Mariya_schastie99</strong> <span class="text-pink"> @kris0301</span> аз поръчах в официалния онлайн магазин, изпратих линк на лични съобщения, точно сега има промоция. О, аз още купих и такива неща, които не позволват меката част на ухото да не се разтяга, когато носиш тежки обеци. Удобно нещо.</p>
+                                <p><strong> Mariya_schastie99</strong> <span class="text-pink"> @kris0301</span> аз поръчах в официалния онлайн магазин, изпратих линк на лични съобщения, точно сега има промоция. О, аз още купих и фиксатори, които не позволяват меката част на ухото да се разтяга, когато носиш тежки обеци. Удобно нещо.</p>
                                 <p><strong> aniatkach</strong> Супер са тези вежди!</p>
                                 <p> <strong> polina17_11</strong> прекрасна както винаги, дай ми също линк, много интересно нещо</p>
                                 <p><strong> bajes_h73</strong> peauteful</p>
@@ -441,7 +443,7 @@
                                 <p><strong> Mariya_schastie99</strong> <span class="text-pink"> @silkforyou</span> благодаря</p>
                                 <p> <strong> fetia_mariya</strong> всъщност много съм уморена от постоянното оформяне  на веждите, губя ценно време, но нещо много се съмнявам в този хвален продукт))</p>
 
-                                <p><strong> zhanna5569</strong> защо не, крайно време е да се улесни живота на жените с нещо такова.</p>
+                                <p><strong> zhanna5569</strong> защо не, крайно време е да се улесни животът на жените с нещо такова.</p>
                             </div>
                         </div>
                     </div>
@@ -467,9 +469,9 @@
                             <div class="price">
                                 <span class="old-price">
                                     <x-oldprice> 158</x-oldprice>
-                                    <x-currency> €</x-currency> лева</span>
+                                     лева</span>
                                 <x-newprice> 79</x-newprice>
-                                <x-currency> €</x-currency> лева</div>
+                                 лева</div>
                         </div>
                         <form action method="post" class="order-form">
                             <input name="csrf_token" type="hidden" value="3abec9c331a3896679203f85419a606b:1617607085">
@@ -486,7 +488,6 @@
         </div>
         <center>
             <p> BEAUT-E SHOP, ul. "Rodopski Izvor" 66В, Sofia, Bulgaria</p>
-            <p> undefined</p>
             <a href="/privacypolicy" target="_blank"> Privacy policy</a>  <br>
             <a href="/general-conditions-of-sale" target="_blank"> General conditions of sale</a>  <br>
             <a href="/legal-warning" target="_blank"> Legal warning</a>
