--- a/OFFERS-358/ro/index.html
+++ b/OFFERS-358/ro/index.html
@@ -142,9 +142,9 @@
                 <h2> Comanda acum!</h2>
                 <div class="price"><span class="old-price">
                         <x-oldprice> 378</x-oldprice>
-                        <x-currency> €</x-currency> lei</span>
+                        <x-currency>  </x-currency> lei</span>
                     <x-newprice> 189</x-newprice>
-                    <x-currency> €</x-currency> lei</div>
+                    <x-currency>  </x-currency> lei</div>
             </div>
             <form action method="post" class="order-form">
                 <input name="csrf_token" type="hidden" value="3abec9c331a3896679203f85419a606b:1617607085">
@@ -173,9 +173,9 @@
                         <h2> Comanda acum!</h2>
                         <div class="price"><span class="old-price">
                                 <x-oldprice> 378</x-oldprice>
-                                <x-currency> €</x-currency> lei</span>
+                                <x-currency>  </x-currency> lei</span>
                             <x-newprice> 189</x-newprice>
-                            <x-currency> €</x-currency> lei</div>
+                            <x-currency>  </x-currency> lei</div>
                     </div>
                     <form action method="post" class="order-form">
                         <input name="csrf_token" type="hidden" value="3abec9c331a3896679203f85419a606b:1617607085">
@@ -465,9 +465,9 @@
                             <div class="price">
                                 <span class="old-price">
                                     <x-oldprice> 378</x-oldprice>
-                                    <x-currency> €</x-currency> lei</span>
+                                    <x-currency>  </x-currency> lei</span>
                                 <x-newprice> 189</x-newprice>
-                                <x-currency> €</x-currency> lei</div>
+                                <x-currency>  </x-currency> lei</div>
                         </div>
                         <form action method="post" class="order-form">
                             <input name="csrf_token" type="hidden" value="3abec9c331a3896679203f85419a606b:1617607085">
@@ -485,9 +485,9 @@
         <center>
             <p> BEAUT-E SHOP,</p>
             <p> Bulevardul Gloriei 15, București, România</p>
-            <a href="/privacypolicy" target="_blank"> Politica de confidențialitate</a>  <br>
-            <a href="/general-conditions-of-sale" target="_blank"> Condiții generale de vânzare</a>  <br>
-            <a href="/legal-warning" target="_blank"> Avertisment juridic</a>
+            <a href="/privacypolicy" target="_blank"> Privacy policy</a>  <br>
+            <a href="/general-conditions-of-sale" target="_blank"> General conditions of sale</a>  <br>
+            <a href="/legal-warning" target="_blank"> Legal warning</a>
         </center>
     </div>
     <style>
