--- a/OFFERS-358/ro/index.html
+++ b/OFFERS-358/ro/index.html
@@ -377,7 +377,7 @@
                                 <p><strong> Anak1N</strong> Am primit comanda ieri, sunt o mulțime de lucruri utile în magazin și cu reduceri uriașe acum. În plus pe langa ștampile, am comandat un epilator pentru față, foarte convenabil și pentru putini bani!<img src="img/img1.jpg" style="max-width: 200px; width: 100%; display: block; margin-top: 10px;" alt>
                                 </p>
 
-                                <p><strong> Maa0950</strong> <span class="text-pink"> @Anak1N</span> eu la fel, din cauza sprâncenelor mereu întârziam, iar acum cu ștampilele în 2 secunde sunt gata! Și apropo, am luat, de asemenea, în acest magazin benzi pentru albirea dinților și un rimel excelent. Ambele produse sunt foarte calitative.</p>
+                                <p><strong> Maa0950</strong> <span class="text-pink"> @Anak1N</span> eu la fel, din cauza sprâncenelor mereu întârziam, iar acum cu ștampilele în 2 secunde sunt gata! Și apropo, am luat, de asemenea, în acest magazin benzi pentru albirea dinților și un rimel excelent. Ambele produse sunt foarte calitative.<img src="img/img4.jpg" style="max-width: 200px; width: 100%; display: block; margin-top: 10px;" alt></p>
                                 <p><strong> Perla_99</strong> fetelor, mi se pare superb, spuneți-mi cât costă? Pot cumpăra în magazin?</p>
                                 <p><strong> BeautyStamp</strong> <span class="text-pink"> @ Perla_99</span> din păcate, nu vor exista livrări către magazine în viitorul apropiat, dar puteți cumpăra produsele noastre pe site-ul oficial</p>
                                 <p><strong> AnaSixty</strong> VREAUUUU!!</p>
@@ -403,7 +403,7 @@
 
                                 <p><strong> buchet_online_com</strong> wooooow!</p>
                                 <p><strong> DauMagie</strong> <span class="text-pink"> @ maria_dream3</span> am ceva îndoieli cu privire la gradul de utilizare, am încercat pentru contururile sprâncenelor, nu mi-a plăcut prea mult</p>
-                                <p><strong> maria_dream3</strong> <span class="text-pink"> @ DauMagie</span> acestea sunt lucruri complet diferite, am încercat și eu contururi, nu sunt foarte ușor de manevrat,  acestea în schimb le-am aplicat o dată și  sunt fericita toată ziua)) plus o pudra de foarte înaltă calitate, primiți o grămadă de produse într-o singură comanda)))<img src="img/img3.jpg" style="max-width: 200px; width: 100%; display: block; margin-top: 10px;" alt></p>
+                                <p><strong> maria_dream3</strong> <span class="text-pink"> @ DauMagie</span> acestea sunt lucruri complet diferite, am încercat și eu contururi, nu sunt foarte ușor de manevrat,  acestea în schimb le-am aplicat o dată și  sunt fericita toată ziua)) plus o pudra de foarte înaltă calitate, primiți o grămadă de produse într-o singură comanda)))</p>
                                 <p><strong> @ maria_dream3</strong> <span class="text-pink"> @ maria_dream3</span> se pare că va fi necesar să mai încerc, vă mulțumesc, va urmăresc de mult timp și știu ca sfătuiți lucruri bune și voi comanda și eu un set, mersi</p>
                                 <p><strong> ami_mama</strong> Se primesc sprâncene foarte frumoase, le folosesc de o lună!</p>
                                 <p><strong> tetra_alexandra</strong> Sunt grozave!</p>
@@ -426,7 +426,7 @@
                                 <hr style="height:1px; background-color:#f2a3b8; border:0;">
                             </div>
                             <div class="scroll">
-                                <p><strong> Oana_dream99</strong> Este ceva uimitor ceea ce tocmai am primit și vreau să ma împărtășesc cu voi!<span class="text-pink"> @BeautyStamp</span> acesta este cu siguranță un lucrul perfect pentru utilizarea zilnică, mai ales atunci când timpul este limitat. Sunt foarte impresionata. Priviți videoclipul meu, nu pierdeți timpul, comandați cât mai este promoția!<img src="img/img4.jpg" style="max-width: 200px; width: 100%; display: block; margin-top: 10px;" alt> </p>
+                                <p><strong> Oana_dream99</strong> Este ceva uimitor ceea ce tocmai am primit și vreau să ma împărtășesc cu voi!<span class="text-pink"> @BeautyStamp</span> acesta este cu siguranță un lucrul perfect pentru utilizarea zilnică, mai ales atunci când timpul este limitat. Sunt foarte impresionata. Priviți videoclipul meu, nu pierdeți timpul, comandați cât mai este promoția!</p>
                                 <p><strong> mariia0684</strong> <span class="text-pink"> @ Oana_dream99</span> frumusețea este întotdeauna pe primul loc, și ca întotdeauna veți găsi oferte bune</p>
                                 <p><strong> silviasensual1</strong> Photoshop</p>
                                 <p><strong> cris0301</strong> Oana ești o REGINA A SPRÂNCENELOR) mișto</p>
