--- a/OFFERS-361/gr-beauty-stamp-l8/index.html
+++ b/OFFERS-361/gr-beauty-stamp-l8/index.html
@@ -415,7 +415,7 @@
             </div>
         </div><br>
         <center>
-            <p> BEAUT-E SHOP, Xouthou 6, Athina 104 32, Greece</p>
+            <p> 26th Oktovriou, 546 27, Thessaloniki, Greece</p>
             <a href="/privacypolicy" target="_blank"> Privacy policy</a>  
             <a href="/general-conditions-of-sale" target="_blank"> General conditions of sale</a> 
             <a href="/legal-warning" target="_blank"> Legal warning</a>
