--- a/OFFERS-279/index.html
+++ b/OFFERS-279/index.html
@@ -51,7 +51,7 @@
               <p> Снимает спазм сосудов</p>
             </div>
             <div class="intro__builets--item">
-              <p> Контролирует уровень сахара в крови/p>
+              <p> Контролирует уровень сахара в крови</p>
             </div>
           </div>
           <p class="intro__warning"> Закажите Cardioflex и начните жиь без гипертонии</p>
