--- a/OFFERS-339/ru/index.html
+++ b/OFFERS-339/ru/index.html
@@ -232,7 +232,8 @@
 								пигменты, позволяющие даже в минимальном количестве надежно спрятать недостатки, сделав
 								тон лица ровным и совершенным. Применять тональный крем можно не только на лицо, но и на
 								всё тело, корректируя цвет, делая его более светлым или наоборот, загоревшим.
-								<br>
+								<br> <br>
+								Основные достоинства:
 								<ul>
 									<li>1. Водостойкий
 									<li>
@@ -273,7 +274,9 @@
 									</small></div>
 							</div>
 							<div class="prod_description">
-								Преимуществ у данного средства множество, он идеально подходит для мужчин и женщин, которые мечтают избавиться от лишних отложений  в проблемных зонах. Активное воздействие крема начинается сразу же после нанесения. В составе крема присутствуют только натуральные компоненты в концентрированном виде, что гарантирует быстрый результат. Объем талии, апельсиновая корка, отложения на ягодицах и животе исчезают уже через несколько дней. Кожа становится гладкой, эластичной. Присутствие перца не вызывает раздражения и жжения.<br>
+								Преимуществ у данного средства множество, он идеально подходит для мужчин и женщин, которые мечтают избавиться от лишних отложений  в проблемных зонах. Активное воздействие крема начинается сразу же после нанесения. В составе крема присутствуют только натуральные компоненты в концентрированном виде, что гарантирует быстрый результат. Объем талии, апельсиновая корка, отложения на ягодицах и животе исчезают уже через несколько дней. Кожа становится гладкой, эластичной. Присутствие перца не вызывает раздражения и жжения.
+								<br> <br>
+								Основные достоинства:
 								<ul>
 									<li>1.Уменьшает объемы тела
 									<li>
@@ -316,7 +319,9 @@
 									</small> </div>
 							</div>
 							<div class="prod_description">
-								Epilage – обладает массой преимуществ перед подобными ему методами шугаринга и ваксинга. Epilage не только удаляет волоски, а также способствует замедлению фазы роста волоса. Средство избавляет от растительности почти безболезненно, не провоцирует появление вросших волосков. А также, Epilage подходит для любого типа кожи. Не вызывает раздражений и травм во время его использования.<br>
+								Epilage – обладает массой преимуществ перед подобными ему методами шугаринга и ваксинга. Epilage не только удаляет волоски, а также способствует замедлению фазы роста волоса. Средство избавляет от растительности почти безболезненно, не провоцирует появление вросших волосков. А также, Epilage подходит для любого типа кожи. Не вызывает раздражений и травм во время его использования.
+								<br> <br>
+								Основные достоинства:
 								<ul>
 									<li>1.Не вызывает аллергических реакций;
 									<li>
@@ -465,7 +470,7 @@
 
 	<div id="order_form" class="popup" data-selectable="true">
 		<div class="flex">
-			<div class="left"><img src="img/prod1_1.jpg" alt>
+			<div class="left"><img src="img/prod1_1.jpg" alt class="img-wid">
 				<p class="prod_name"><span>Майка</span></p>
 				<div class="price">
 					<div class="old"><span>
