--- a/OFFERS-359/gr/index.html
+++ b/OFFERS-359/gr/index.html
@@ -10,7 +10,7 @@
     <meta content="320" name="MobileOptimized">
     <meta content="telephone=no" name="format-detection">
     <link rel="shortcut icon" href="favicon.ico" type="image/png">
-    <title>Prod</title>
+    <title>Eyebrow Beauty Stamp</title>
 <meta property="og:title" content=""/>
 <meta property="og:description" content="-50%"/>
 <meta property="og:image" content=""/>
@@ -92,7 +92,7 @@
     </section>
 
     <section id="page-order" class="page-order">
-        <h2 class="title" id="product-info"> (Εκπτωση 50%) Prod</h2>
+        <h2 class="title" id="product-info"> (Εκπτωση 50%) Eyebrow Beauty Stamp</h2>
         <form id="form" name="form" method="post">
 
 
