--- a/OFFERS-339/it-2/index.html
+++ b/OFFERS-339/it-2/index.html
@@ -220,8 +220,8 @@
 						</li>
 						<li>
 							<small> ACQUISTANDO TRE PRODOTTI</small>
-							<span> IL QUARTO ARTICOLO</span>
-							<p> GRATIS</p>
+							<span> GRATIS</span>
+							<p> IL QUARTO ARTICOLO</p>
 						</li>
 					</ul>
 				</div>
