--- a/OFFERS-345/ru/index.html
+++ b/OFFERS-345/ru/index.html
@@ -554,17 +554,15 @@
                 <div class="info_block">
                     <div class="logo">
                         <img src="img/download.jpg" alt="product" style="max-width: 160px;">
-                    </div>
-                    <div class="action">
-                        <p>Для заказа заполните заявку и ждите звонка от оператора
+                        <p>Распродажа украшений
                         </p>
                     </div>
-                    <form class="main-order-form order_form" action method="post">
-                        <input class="input" type="text" name="name" placeholder="Введите ваше имя" required>
-                        <input class="input" type="tel" name="phone" placeholder="Введите ваш телефон" required>
-                        <input type="hidden" name="comments" value>
-                        <button class="button">Заказать со скидкой</button>
-                    </form>
+                    <ul class="ofr_bull">
+                        <li>стильный и необычный дизайн</li>
+                        <li>качественные материалы</li>
+                        <li>украшения, дорогие сердцу</li>
+                    </ul> <a href="#catalog" class="button toform">Перейти в каталог</a>
+
                 </div>
                 <div class="sale">
                     <p><span>-50%</span> на весь каталог
